# aristocrat-video-search-ai

./: .gitignore  .markdownlint.json  README.md  format.sh  memory_note.md  plan_to_remember.md  pyproject.toml  requirements.txt
scripts/: batch_ingestion.py  config.py  create_embeddings.py  index_to_bigquery.py  path_utils.py  run_ingestion.py  test_video_intelligence_stt.py
video_search_agent/: .env  agent.py  config.py
video_search_agent/prompts/: data_engineer.py  planner_prompt.py  root_agent_prompt.py
video_search_agent/tools/: data_engineer.py  quiz_generator.py  utils.py
