[project]
name = "video-search-ai"
version = "0.1.0"
description = "An agentic system for searching video content."
dependencies = [
    "google-cloud-aiplatform",
    "google-cloud-speech",
    "google-cloud-storage",
    "google-cloud-videointelligence",
    "pydantic",
    "google-adk",
    "pydub",
    "ffmpeg-python"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
